src/test/ui/reachable/expr_return_in_macro.stderr
error: unreachable expression
  --> $DIR/expr_return_in_macro.rs:13:5
   |
LL |     return early_return!();
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_return_in_macro.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_return_in_macro.rs:8:9
   |
LL |         return ()
   |         ^^^^^^^^^
...
LL |     return early_return!();
   |            --------------- in this macro invocation

error: aborting due to previous error

